--- a/about.html
+++ b/about.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title> Mobile Royale</title>
+    <title> Mobile Royale | About</title>
+    <link rel="shortcut icon" type="image/png" href="images/icons/logo.png">
+
 </head>
 <link rel="stylesheet" id="google-fonts-1-css" href="https://fonts.googleapis.com/css?family=Play%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CRoboto%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7COxanium%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CTomorrow%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=auto&amp;ver=5.8.2" type="text/css" media="all">
 <style>
@@ -18,7 +20,8 @@
     .glass{
         width: 60vw;
         color:goldenrod !important;
-
+        margin-top: 120px !important;
+        margin-bottom: 20px !important;
     }
 
     .blurred{
@@ -36,8 +39,9 @@
     @media all and (max-width: 768px) {
         .glass{
             width: 90vw;
-            height:100vh;
+            height:90vh;
         }
+
 
         body{
             background-size: 2550px;
@@ -121,13 +125,13 @@
                     <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">NFT Access</a>
-                </li>
-                <li class="nav-item">
-                    <a href="token.html" class="nav-link">RYL Token</a>
+                    <a href="#" class="nav-link">NFT Heroes</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Partner</a>
+                </li>
+                <li class="nav-item">
+                    <a href="token.html" class="nav-link">RYL Token</a>
                 </li>
                 <li class="nav-item">
                     <a href="about.html" class="nav-link">About</a>
@@ -141,11 +145,6 @@
                 <li class="nav-item ring">
                     <div class="icons">
                         <div class="sociaIcon">
-                            <a href="">
-                                <img src="images/icons/IMG-20211206-WA0047.jpg" alt="icon"/>
-                            </a>
-                        </div>
-                        <div class="sociaIcon">
                             <a href="https://mobile.twitter.com/royale_NFTS?t=fDbtnZR7bjnqbr8v-xzEcA&s=08">
                                 <img src="images/icons/IMG-20211206-WA0048.jpg" alt="icon"/>
                             </a>
@@ -156,7 +155,7 @@
                             </a>
                         </div>
                         <div class="sociaIcon">
-                            <a href="">
+                            <a href="about.html">
                                 <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
                             </a>
                         </div>
@@ -205,16 +204,19 @@
             </div>
             <div class="footerCenter">
                 <div class="sociaIcon">
-                    <img src="images/icons/IMG-20211206-WA0047.jpg" alt="icon"/>
+                    <a href="https://mobile.twitter.com/royale_NFTS?t=fDbtnZR7bjnqbr8v-xzEcA&s=08">
+                        <img src="images/icons/IMG-20211206-WA0048.jpg" alt="icon"/>
+                    </a>
                 </div>
                 <div class="sociaIcon">
-                    <img src="images/icons/IMG-20211206-WA0048.jpg" alt="icon"/>
+                    <a href="https://youtube.com/channel/UCbaM3zENJwkjhHpfdVfM_3Q">
+                        <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
+                    </a>
                 </div>
                 <div class="sociaIcon">
-                    <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
-                </div>
-                <div class="sociaIcon">
-                    <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
+                    <a href="about.html">
+                        <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
+                    </a>
                 </div>
             </div>
             <div class="footerRight">
