--- a/coming.html
+++ b/coming.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title> Mobile Royale</title>
+    <title> Mobile Royale | Coming Soon</title>
+    <link rel="shortcut icon" type="image/png" href="images/icons/logo.png">
+
 </head>
 <link rel="stylesheet" id="google-fonts-1-css" href="https://fonts.googleapis.com/css?family=Play%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CRoboto%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7COxanium%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CTomorrow%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=auto&amp;ver=5.8.2" type="text/css" media="all">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,9 +16,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Corinthia:wght@700&display=swap" rel="stylesheet">
 
 <style>
+    body{
+        width: 100%;
+    }
     .coming{
         width: 90vw;
-        height:70vh;
+        height:78vh;
         display:flex;
         flex-direction: column;
         justify-content: center;
@@ -59,6 +64,10 @@
             transition: 0.3s;
             box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
             z-index: 9999;
+        }
+
+        .coming{
+            height: 70vh;
         }
     
         .nav-menu.active {
@@ -112,10 +121,10 @@
                     <a href="#" class="nav-link">NFT Access</a>
                 </li>
                 <li class="nav-item">
-                    <a href="token.html" class="nav-link">RYL Token</a>
+                    <a href="#" class="nav-link">Partner</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Partner</a>
+                    <a href="token.html" class="nav-link">RYL Token</a>
                 </li>
                 <li class="nav-item">
                     <a href="about.html" class="nav-link">About</a>
@@ -128,11 +137,6 @@
                 </li>
                 <li class="nav-item ring">
                     <div class="icons">
-                        <div class="sociaIcon">
-                            <a href="">
-                                <img src="images/icons/IMG-20211206-WA0047.jpg" alt="icon"/>
-                            </a>
-                        </div>
                         <div class="sociaIcon">
                             <a href="https://mobile.twitter.com/royale_NFTS?t=fDbtnZR7bjnqbr8v-xzEcA&s=08">
                                 <img src="images/icons/IMG-20211206-WA0048.jpg" alt="icon"/>
@@ -176,16 +180,19 @@
         </div>
         <div class="footerCenter">
             <div class="sociaIcon">
-                <img src="images/icons/IMG-20211206-WA0047.jpg" alt="icon"/>
+                <a href="https://mobile.twitter.com/royale_NFTS?t=fDbtnZR7bjnqbr8v-xzEcA&s=08">
+                    <img src="images/icons/IMG-20211206-WA0048.jpg" alt="icon"/>
+                </a>
             </div>
             <div class="sociaIcon">
-                <img src="images/icons/IMG-20211206-WA0048.jpg" alt="icon"/>
+                <a href="https://youtube.com/channel/UCbaM3zENJwkjhHpfdVfM_3Q">
+                    <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
+                </a>
             </div>
             <div class="sociaIcon">
-                <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
-            </div>
-            <div class="sociaIcon">
-                <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
+                <a href="">
+                    <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
+                </a>
             </div>
         </div>
         <div class="footerRight">
