--- a/market.html
+++ b/market.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title> Mobile Royale</title>
+    <title> Mobile Royale | Marketplace </title>
+    <link rel="shortcut icon" type="image/png" href="images/icons/logo.png">
+
 </head>
 <link rel="stylesheet" id="google-fonts-1-css" href="https://fonts.googleapis.com/css?family=Play%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CRoboto%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7COxanium%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CTomorrow%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=auto&amp;ver=5.8.2" type="text/css" media="all">
 
@@ -22,6 +24,7 @@
         align-items: center;
         justify-content: center;
         color: goldenrod;
+        padding-top: 120px;
     }
 
     .market .title{
@@ -198,13 +201,13 @@
                     <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">NFT Access</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Whitepaper</a>
+                    <a href="#" class="nav-link">NFT Heroes</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Partner</a>
+                </li>
+                <li class="nav-item">
+                    <a href="token.html" class="nav-link">Royal Token</a>
                 </li>
                 <li class="nav-item">
                     <a href="about.html" class="nav-link">About</a>
@@ -213,15 +216,10 @@
                     <a href="team.html" class="nav-link">Team</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Marketplace</a>
+                    <a href="market.html" class="nav-link">Marketplace</a>
                 </li>
                 <li class="nav-item ring">
                     <div class="icons">
-                        <div class="sociaIcon">
-                            <a href="">
-                                <img src="images/icons/IMG-20211206-WA0047.jpg" alt="icon"/>
-                            </a>
-                        </div>
                         <div class="sociaIcon">
                             <a href="https://mobile.twitter.com/royale_NFTS?t=fDbtnZR7bjnqbr8v-xzEcA&s=08">
                                 <img src="images/icons/IMG-20211206-WA0048.jpg" alt="icon"/>
@@ -646,16 +644,19 @@
         </div>
         <div class="footerCenter">
             <div class="sociaIcon">
-                <img src="images/icons/IMG-20211206-WA0047.jpg" alt="icon"/>
+                <a href="https://mobile.twitter.com/royale_NFTS?t=fDbtnZR7bjnqbr8v-xzEcA&s=08">
+                    <img src="images/icons/IMG-20211206-WA0048.jpg" alt="icon"/>
+                </a>
             </div>
             <div class="sociaIcon">
-                <img src="images/icons/IMG-20211206-WA0048.jpg" alt="icon"/>
+                <a href="https://youtube.com/channel/UCbaM3zENJwkjhHpfdVfM_3Q">
+                    <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
+                </a>
             </div>
             <div class="sociaIcon">
-                <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
-            </div>
-            <div class="sociaIcon">
-                <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
+                <a href="">
+                    <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
+                </a>
             </div>
         </div>
         <div class="footerRight">
