--- a/token.html
+++ b/token.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title> Mobile Royale</title>
+    <title> Mobile Royale | Token </title>
+    <link rel="shortcut icon" type="image/png" href="images/icons/logo.png">
+
 </head>
 <link rel="stylesheet" id="google-fonts-1-css" href="https://fonts.googleapis.com/css?family=Play%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CRoboto%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7COxanium%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CTomorrow%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=auto&amp;ver=5.8.2" type="text/css" media="all">
 <style>
@@ -22,6 +24,7 @@
         justify-content: center;
         color: goldenrod !important;
         font-family: "Poppins";
+        padding-top: 70px;
     }
 
     .ryl .tokCon{
@@ -41,14 +44,25 @@
     }
 
     .ryl .title{
-        margin-bottom: 50px;
+        margin-bottom: 20px;
         color: goldenrod;
         font-weight: bolder;
         font-size: 20px;
+        margin-top:20px;
+
+    }
+
+    .ryl .tokCon .row h2{
+        background-image: url('images/icons/frame.png') !important;
+        background-size: 420px;
+        text-align: center;
+        background-position: center;
+        background-repeat: no-repeat;
+        padding: 5px;
     }
 
     .ryl .tokCon .midRow{
-        background: url('images/backgrounds/roadmap.jpeg') no-repeat;
+        background: url('images/icons/-5897750998565370046_109.jpg') no-repeat;
         border-radius: 50%;
         background-repeat: no-repeat;
         background-size: cover;
@@ -65,6 +79,8 @@
             justify-content: center;
             align-items: center;
             height: 100% !important;
+            padding-top: 120px;
+
         }
         .ryl .tokCon{
             display: flex;
@@ -84,6 +100,23 @@
         .ryl .tokCon .row .item{
             margin-bottom: 40px;
         }
+
+        body{
+            background-size: 2550px;
+            background-image: url('resources/backs/[GetPaidStock.com]-61b6ed7dafaf5.jpg');
+            object-fit: cover;
+          
+        }
+
+        .ryl .tokCon .row h2{
+            background-image: url('images/icons/frame.png') !important;
+            background-size: 420px;
+            text-align: center;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+
+
     }
     
 
@@ -156,13 +189,13 @@
                     <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">NFT Heros</a>
-                </li>
-                <li class="nav-item">
-                    <a href="token.html" class="nav-link">RYL Token</a>
+                    <a href="#" class="nav-link">NFT Heroes</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Partner</a>
+                </li>
+                <li class="nav-item">
+                    <a href="token.html" class="nav-link">RYL Token</a>
                 </li>
                 <li class="nav-item">
                     <a href="about.html" class="nav-link">About</a>
@@ -176,16 +209,19 @@
                 <li class="nav-item ring">
                     <div class="icons">
                         <div class="sociaIcon">
-                            <img src="images/icons/IMG-20211206-WA0047.jpg" alt="icon"/>
+                            <a href="https://mobile.twitter.com/royale_NFTS?t=fDbtnZR7bjnqbr8v-xzEcA&s=08">
+                                <img src="images/icons/IMG-20211206-WA0048.jpg" alt="icon"/>
+                            </a>
                         </div>
                         <div class="sociaIcon">
-                            <img src="images/icons/IMG-20211206-WA0048.jpg" alt="icon"/>
+                            <a href="https://youtube.com/channel/UCbaM3zENJwkjhHpfdVfM_3Q">
+                                <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
+                            </a>
                         </div>
                         <div class="sociaIcon">
-                            <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
-                        </div>
-                        <div class="sociaIcon">
-                            <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
+                            <a href="about.html">
+                                <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
+                            </a>
                         </div>
                     </div>
                 </li>
@@ -203,7 +239,9 @@
         <div class="tokCon">
             <div class="row">
                 <div class="item">
-                    <h2>Purchase Game Items</h2>
+                    <div class="heFrame">
+                        <h2>Purchase Game Items</h2>
+                    </div>
                     <p>ROYAL can be used to purchase in-game assets,Such as palaces, castles, military equipment and weapons</p>
                 </div>
                 <div class="item">
@@ -238,16 +276,19 @@
         </div>
         <div class="footerCenter">
             <div class="sociaIcon">
-                <img src="images/icons/IMG-20211206-WA0047.jpg" alt="icon"/>
+                <a href="https://mobile.twitter.com/royale_NFTS?t=fDbtnZR7bjnqbr8v-xzEcA&s=08">
+                    <img src="images/icons/IMG-20211206-WA0048.jpg" alt="icon"/>
+                </a>
             </div>
             <div class="sociaIcon">
-                <img src="images/icons/IMG-20211206-WA0048.jpg" alt="icon"/>
+                <a href="https://youtube.com/channel/UCbaM3zENJwkjhHpfdVfM_3Q">
+                    <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
+                </a>
             </div>
             <div class="sociaIcon">
-                <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
-            </div>
-            <div class="sociaIcon">
-                <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
+                <a href="about.html">
+                    <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
+                </a>
             </div>
         </div>
         <div class="footerRight">
