--- a/about.html
+++ b/about.html
@@ -30,6 +30,9 @@
         color:goldenrod !important;
     }
 
+    .blurred .info{
+        font-size: 16px;
+    }
     .counter{
         color:goldenrod !important;
 
@@ -174,7 +177,7 @@
     <div class="blurred" style="width: 100vw; height:100vh; overflow: hidden; ">
         <div class="glass" style="margin-top: -10px; padding: 19px; line-height: 20px; height: 90vh;">
             <section class="counter">
-                <div class="container" style="margin-top: -40px; font-size: 12px; text-align: center; color: goldenrod !important;">
+                <div class="container" style="margin-top: -40px; font-size: 16px; text-align: center; color: goldenrod !important;">
                     <h1 id="headline"> About Game</h1>
                     <div id="countdown" style="margin-top: 20px;; margin-bottom: 20px;">
                         REAL-TIME STRATEGY & RPG: <br/>
@@ -220,7 +223,8 @@
                 </div>
             </div>
             <div class="footerRight">
-                <p>Cyber Battle is an ultimate real-time strategy game packed with an intense and immersive gaming experience where players or members of the game’s community can earn tokens through skilled gameplay.</p>
+                            <!--<p>Cyber Battle is an ultimate real-time strategy game packed with an intense and immersive gaming experience where players or members of the game’s community can earn tokens through skilled gameplay.</p>-->
+
                 <span>
                     <a href="about.html">Learn More</a>
                 </span>
