--- a/market.html
+++ b/market.html
@@ -660,7 +660,8 @@
             </div>
         </div>
         <div class="footerRight">
-            <p>Cyber Battle is an ultimate real-time strategy game packed with an intense and immersive gaming experience where players or members of the game’s community can earn tokens through skilled gameplay.</p>
+                        <!--<p>Cyber Battle is an ultimate real-time strategy game packed with an intense and immersive gaming experience where players or members of the game’s community can earn tokens through skilled gameplay.</p>-->
+
             <span>
                 <a href="about.html">Learn More</a>
             </span>
