--- a/about.html
+++ b/about.html
@@ -157,6 +157,12 @@
                                 <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
                             </a>
                         </div>
+                        
+                        <div class="sociaIcon">
+                            <a href="https://www.instagram.com/p/CVnu1QKDi_v/?utm_medium=share_sheet">
+                                <img src="images/icons/insta.jpeg" alt="icon"/>
+                            </a>
+                        </div>
                         <div class="sociaIcon">
                             <a href="about.html">
                                 <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
@@ -214,6 +220,12 @@
                 <div class="sociaIcon">
                     <a href="https://youtube.com/channel/UCbaM3zENJwkjhHpfdVfM_3Q">
                         <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
+                    </a>
+                </div>
+                
+                <div class="sociaIcon">
+                    <a href="https://www.instagram.com/p/CVnu1QKDi_v/?utm_medium=share_sheet">
+                        <img src="images/icons/insta.jpeg" alt="icon"/>
                     </a>
                 </div>
                 <div class="sociaIcon">
