--- a/market.html
+++ b/market.html
@@ -230,6 +230,12 @@
                                 <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
                             </a>
                         </div>
+                        
+                        <div class="sociaIcon">
+                            <a href="https://www.instagram.com/p/CVnu1QKDi_v/?utm_medium=share_sheet">
+                                <img src="images/icons/insta.jpeg" alt="icon"/>
+                            </a>
+                        </div>
                         <div class="sociaIcon">
                             <a href="">
                                 <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
@@ -630,6 +636,48 @@
                     </div>
                 </div>
             </div>
+
+            <div class="nft">
+                <h2>Ranked Reward</h2>
+                <div class="nftList">
+                    <div class="child">
+                        <h2>Ranked Reward 1</h2>
+                        <img src="resources/ranked reward/IMG_20211106_112126.jpg" style="width: 120px; height: 100px;"/>
+                        <hr style="width: 120px;"/>
+                        <div class="btns">
+                            <img src="resources/backs/like.png" alt="like" style=" cursor: pointer; border-radius:50%; width:22px !important; height:22px !important; margin-right: 50px; "/>
+                            <a href="coming.html">Buy</a>
+                        </div>
+                    </div>
+                    <div class="child">
+                        <h2>Ranked Reward 2</h2>
+                        <img src="resources/ranked reward/IMG_20211106_112141.jpg" style="width: 120px; height: 100px;"/>
+                        <hr style="width: 120px;"/>
+                        <div class="btns">
+                            <img src="resources/backs/like.png" alt="like" style=" cursor: pointer; border-radius:50%; width:22px !important; height:22px !important; margin-right: 50px; "/>
+                            <a href="coming.html">Buy</a>
+                        </div>
+                    </div>
+                    <div class="child">
+                        <h2>Ranked Reward 3</h2>
+                        <img src="resources/ranked reward/IMG_20211106_112156.jpg" style="width: 120px; height: 100px;"/>
+                        <hr style="width: 120px;"/>
+                        <div class="btns">
+                            <img src="resources/backs/like.png" alt="like" style=" cursor: pointer; border-radius:50%; width:22px !important; height:22px !important; margin-right: 50px; "/>
+                            <a href="coming.html">Buy</a>
+                        </div>
+                    </div>
+                    <div class="child">
+                        <h2>Ranked Reward 4</h2>
+                        <img src="resources/ranked reward/IMG_20211106_112222.jpg" style="width: 120px; height: 100px;"/>
+                        <hr style="width: 120px;"/>
+                        <div class="btns">
+                            <img src="resources/backs/like.png" alt="like" style=" cursor: pointer; border-radius:50%; width:22px !important; height:22px !important; margin-right: 50px; "/>
+                            <a href="coming.html">Buy</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -649,12 +697,17 @@
                 </a>
             </div>
             <div class="sociaIcon">
-                <a href="https://youtube.com/channel/UCbaM3zENJwkjhHpfdVfM_3Q">
-                    <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
+                <a href="https://mobile.twitter.com/royale_NFTS?t=fDbtnZR7bjnqbr8v-xzEcA&s=08">
+                    <img src="images/icons/IMG-20211206-WA0047.jpg" alt="icon"/>
                 </a>
             </div>
             <div class="sociaIcon">
-                <a href="">
+                <a href="https://www.instagram.com/p/CVnu1QKDi_v/?utm_medium=share_sheet">
+                    <img src="images/icons/insta.jpeg" alt="icon"/>
+                </a>
+            </div>
+            <div class="sociaIcon">
+                <a href="about.html">
                     <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
                 </a>
             </div>
