--- a/coming.html
+++ b/coming.html
@@ -147,6 +147,12 @@
                                 <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
                             </a>
                         </div>
+                        
+                        <div class="sociaIcon">
+                            <a href="https://www.instagram.com/p/CVnu1QKDi_v/?utm_medium=share_sheet">
+                                <img src="images/icons/insta.jpeg" alt="icon"/>
+                            </a>
+                        </div>
                         <div class="sociaIcon">
                             <a href="">
                                 <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
@@ -189,8 +195,14 @@
                     <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
                 </a>
             </div>
+            
             <div class="sociaIcon">
-                <a href="">
+                <a href="https://www.instagram.com/p/CVnu1QKDi_v/?utm_medium=share_sheet">
+                    <img src="images/icons/insta.jpeg" alt="icon"/>
+                </a>
+            </div>
+            <div class="sociaIcon">
+                <a href="about.html">
                     <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
                 </a>
             </div>
