--- a/team.html
+++ b/team.html
@@ -283,7 +283,12 @@
                             </a>
                         </div>
                         <div class="sociaIcon">
-                            <a href="">
+                            <a href="https://www.instagram.com/p/CVnu1QKDi_v/?utm_medium=share_sheet">
+                                <img src="images/icons/insta.jpeg" alt="icon" style="margin-top: 28px !important;"/>
+                            </a>
+                        </div>
+                        <div class="sociaIcon">
+                            <a href="about.html">
                                 <img src="images/icons/IMG-20211206-WA0050.jpg" style="margin-bottom: 1px;" alt="icon"/>
                             </a>
                         </div>
@@ -367,6 +372,11 @@
             <div class="sociaIcon">
                 <a href="https://youtube.com/channel/UCbaM3zENJwkjhHpfdVfM_3Q">
                     <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
+                </a>
+            </div>
+            <div class="sociaIcon">
+                <a href="https://www.instagram.com/p/CVnu1QKDi_v/?utm_medium=share_sheet">
+                    <img src="images/icons/insta.jpeg" alt="icon"/>
                 </a>
             </div>
             <div class="sociaIcon">
