--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
             background-size:1000vw !important;
         }
 
+        .nav-menu{
+            width: 100% !important;
+        }
+
         .features{
 
             background-image: url('images/backgrounds/back4.jpeg') !important;
