--- a/market.html
+++ b/market.html
@@ -641,7 +641,7 @@
                 <h2>Ranked Reward</h2>
                 <div class="nftList">
                     <div class="child">
-                        <h2>Ranked Reward 1</h2>
+                        <h2>Watery</h2>
                         <img src="resources/ranked reward/IMG_20211106_112126.jpg" style="width: 120px; height: 100px;"/>
                         <hr style="width: 120px;"/>
                         <div class="btns">
@@ -650,7 +650,7 @@
                         </div>
                     </div>
                     <div class="child">
-                        <h2>Ranked Reward 2</h2>
+                        <h2>Fiery</h2>
                         <img src="resources/ranked reward/IMG_20211106_112141.jpg" style="width: 120px; height: 100px;"/>
                         <hr style="width: 120px;"/>
                         <div class="btns">
@@ -659,7 +659,7 @@
                         </div>
                     </div>
                     <div class="child">
-                        <h2>Ranked Reward 3</h2>
+                        <h2>Windy</h2>
                         <img src="resources/ranked reward/IMG_20211106_112156.jpg" style="width: 120px; height: 100px;"/>
                         <hr style="width: 120px;"/>
                         <div class="btns">
@@ -668,7 +668,7 @@
                         </div>
                     </div>
                     <div class="child">
-                        <h2>Ranked Reward 4</h2>
+                        <h2>Earthy</h2>
                         <img src="resources/ranked reward/IMG_20211106_112222.jpg" style="width: 120px; height: 100px;"/>
                         <hr style="width: 120px;"/>
                         <div class="btns">
