--- a/index.html
+++ b/index.html
@@ -649,12 +649,24 @@
                     <img src="images/partners/p1.png" />
                 </div>
                 <div class="partCont" style="border-radius:0; background: transparent;">
-                    <img src="images/partners/p7.jpeg"  style="width: 170px; height: 170px; " />
+                    <img src="images/partners/binance.jpeg"  style="width: 170px; height: 170px; " />
                 </div>
             </div>
             <div class="row3">
                 <div class="partCont" style="border-radius:0; background: transparent;">
                     <img src="images/partners/p9.jpeg"  style="width: 170px; height: 170px; " />
+                </div>
+                <div class="partCont" style="border-radius:0; background: transparent;">
+                    <img src="images/partners/1639694609063.jpg"  style="width: 170px; height: 170px; " />
+                </div>
+                <div class="partCont" style="border-radius:0; background: transparent;">
+                    <img src="images/partners/1639694609073.jpg"  style="width: 170px; height: 170px; " />
+                </div>
+                <div class="partCont" style="border-radius:0; background: transparent;">
+                    <img src="images/partners/1639694609085.jpg"  style="width: 170px; height: 170px; " />
+                </div>
+                <div class="partCont" style="border-radius:0; background: transparent;">
+                    <img src="images/partners/1639694609093.jpg"  style="width: 170px; height: 170px; " />
                 </div>
             </div>
         </div>
