--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <style>
     header{
         width: 100vw !important;
-        overflow-x: hidden !important;
+        /*overflow-x: hidden !important;*/
         z-index:1000 !important; 
     }
 
