--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 </div>
             </div>
             
-            <div class="slider__contents">
+            <div class="slider__contents" id="garg">
                 <div class="sliderLeft" id="gan" >
                     <h2 class="slider__caption">Gargantor</h2>
                     <img src="images/nft/Gargantor.png" alt="rep"  />
